# fastapi-ocr-ai

./: Dockerfile  README.md  fly.toml  main.py  pyproject.toml  requirements.txt
