[project]
name = "ocr-ai"
version = "0.1.0"
description = ""
authors = [{ name = "Gery Wibowo", email = "monk3y.mars@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
    "fastapi[standard] (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "openai (>=1.60.0,<2.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
]

[tool.pyright]
venvPath = "."
venv = "venv"
